--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Facebook messager Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,10 @@
     "express": "^4.14.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.15.0",
+    "eslint-plugin-jsdoc": "^2.4.0"
   }
 }
