--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "chai": "^3.5.0",
     "eslint": "^3.15.0",
-    "eslint-plugin-jsdoc": "^2.4.0"
+    "eslint-plugin-jsdoc": "^2.4.0",
+    "mocha": "^3.2.0",
+    "mocha-testdata": "^1.2.0",
+    "sinon": "^1.17.7"
   }
 }
