--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "precommit": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "chai": "^3.5.0",
     "eslint": "^3.15.0",
     "eslint-plugin-jsdoc": "^2.4.0",
+    "husky": "^0.13.1",
     "mocha": "^3.2.0",
     "mocha-testdata": "^1.2.0",
     "sinon": "^1.17.7"
