--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Facebook messager Bot",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "istanbul cover _mocha",
     "lint": "eslint ./",
     "precommit": "npm run lint"
   },
@@ -30,6 +30,7 @@
     "eslint": "^3.15.0",
     "eslint-plugin-jsdoc": "^2.4.0",
     "husky": "^0.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-testdata": "^1.2.0",
     "sinon": "^1.17.7"
